start styling on header, skills and projects sections

--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -1,6 +1,13 @@
 @import "./setup";
 @import "./variables";
 @import "./typography";
-@import "./baseStyles";
+@import "./base-styles";
+// @import "./animate.css";
 @import "./header";
+@import "./about";
+@import "./projects";
+@import "./skills";
+@import "./contact";
 @import "./footer";
+@import "./animations";
+@import "./media-queries";
