--- a/styles/style.css
+++ b/styles/style.css
@@ -220,3 +220,328 @@ template {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+
+/* fonts */
+/* colors */
+html {
+  font-size: 125%;
+}
+
+body, p {
+  font-family: "Space Grotesk", sans-serif;
+}
+
+h1, h3 {
+  font-family: "Playfair Display", serif;
+  color: black;
+  background-color: #FE6564;
+}
+
+h1 {
+  font-size: 12vw;
+  background-color: #FFC065;
+}
+
+h3 {
+  font-size: 3rem;
+  border-bottom: 5px solid black;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+a,
+li {
+  text-decoration: none;
+}
+
+li {
+  list-style: none;
+}
+
+body {
+  background-color: #C89D8D;
+}
+
+main {
+  background-color: white;
+}
+
+button,
+.project-link {
+  text-align: center;
+  outline: none;
+  color: black;
+  border: 2px solid black;
+  background-color: white;
+  padding: 12px 8px;
+  -webkit-box-shadow: 6px 6px black;
+          box-shadow: 6px 6px black;
+  cursor: pointer;
+  font-family: inherit;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+button:hover, button:focus,
+.project-link:hover,
+.project-link:focus {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  -webkit-transform: translate(6px, 6px);
+          transform: translate(6px, 6px);
+}
+
+header {
+  background-color: white;
+  height: 100vh;
+}
+
+.desktop-nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  background-color: #FFC065;
+  border: 5px solid black;
+  font-family: "Space Grotesk", sans-serif;
+}
+
+.desktop-menu-dropdown {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  width: 50%;
+  background-color: black;
+  color: white;
+  padding-top: 15px;
+}
+.desktop-menu-dropdown .nav-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.desktop-menu-dropdown .nav-item .nav-icon i {
+  color: inherit;
+}
+
+.nav-item-text {
+  visibility: hidden;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.nav-item:hover p {
+  visibility: visible;
+}
+
+.hero-area {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 100%;
+}
+
+.hero-text {
+  margin-left: 80px;
+  margin-bottom: 100px;
+}
+
+.projects {
+  border: 5px solid black;
+}
+
+.projects-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 80px;
+}
+
+.project {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 46%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border: 3px solid black;
+  -webkit-box-shadow: 10px 10px black;
+          box-shadow: 10px 10px black;
+  padding: 40px;
+  text-align: center;
+}
+
+.project-image {
+  width: 70%;
+}
+.project-image img {
+  width: 100%;
+  border: 3px solid black;
+}
+
+.tools-used {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.tools-used li {
+  font-size: 0.8rem;
+  border: 1px solid black;
+  padding: 4px;
+}
+
+.project-links {
+  margin: 40px;
+}
+
+.project-link {
+  margin: 20px;
+  padding: 20px;
+}
+
+.skills {
+  background-color: white;
+  border-bottom: 5px solid black;
+}
+
+.skills-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.skill-color-block {
+  width: 300px;
+  background-color: #04897C;
+  border-left: 5px solid black;
+}
+
+.skill-icons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 80px;
+}
+
+.skill-container {
+  width: 200px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 20px;
+  text-align: center;
+}
+
+.skill-container p {
+  visibility: hidden;
+}
+
+.skill-icon {
+  font-size: 6vw;
+  padding-bottom: 20px;
+}
+
+.skill-container:hover {
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+  color: #FE6564;
+  -webkit-animation: shakeX;
+          animation: shakeX;
+  -webkit-animation-duration: 2s;
+          animation-duration: 2s;
+}
+.skill-container:hover p {
+  visibility: visible;
+}
+
+.contact {
+  height: 100vh;
+}
+
+form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 40px;
+}
+
+.social-nav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+footer {
+  border-top: 5px solid black;
+  height: 200px;
+  background-color: #04897C;
+}
+
+li {
+  text-decoration: none;
+}
