--- a/styles/sass/_about.scss
+++ b/styles/sass/_about.scss
@@ -1,3 +1,35 @@
-// .about {
-//     background-color: white;
-// }
+.about {
+    padding-bottom: 100px;
+}
+
+.about-section {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.about-links {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 60%;
+}
+
+.about-container {
+    width: 75%;
+    .about-title {
+        padding-bottom: 40px;
+    }
+    p {
+        padding-bottom: 20px;
+    }
+}
+
+.about-image {
+    width: 20%;
+    img {
+        max-width: 250px;
+    }
+}
+
+
