--- a/styles/sass/_base-styles.scss
+++ b/styles/sass/_base-styles.scss
@@ -8,8 +8,8 @@ body {
 }
 
 .wrapper {
-    width: 90%;
-    max-width: 1440px;
+    width: 85%;
+    max-width: 1280px;
     margin: 0 auto;
 }
 
@@ -23,44 +23,28 @@ li {
     list-style: none;
 }
 
-// button,
-// a.project-link {
-//     text-align: center;
-//     outline: none;
-//     color: black;
-//     border: 1px solid black;
-//     background-color: white;
-//     padding: 12px 10px;
-//     box-shadow: 6px 6px black;
-//     cursor: pointer;
-//     font-family: inherit;
-//     transition: 0.4s;
-//     &:hover, &:focus {
-//         box-shadow: none;
-//         transform: translate(6px, 6px);
-//     }
-// }
-
 button,
-a.project-link {
+.button {
+    font-size: 1.2rem;
+    font-weight: 700;
+    line-height: 1.6;
     text-align: center;
     outline: none;
     color: $surface-primary;
-    border: 1px solid black;
+    border: 2px solid black;
     background-color: $text-primary;
-    padding: 18px 26px;
+    padding: 12px 24px;
     box-shadow: none;
     cursor: pointer;
     font-family: $headingFont;
-    transition: 0.4s;
+    transition: box-shadow 200ms ease;
     &:hover, &:focus {
-        box-shadow: -4px 4px $accent-blue;
-        // transform: translate(6px, 6px);
+        box-shadow: -5px 5px $accent-blue;
     }
 }
 
 section {
-    padding: 60px 0;
+    padding: 50px 0;
 }
 
 .section-heading {
@@ -69,7 +53,7 @@ section {
 
 .accent-line {
     width: 100%;
-    height: 2px;
+    height: 1px;
     background-color: $text-primary;
     align-self: center;
     margin-left: 25px;
