--- a/styles/sass/_typography.scss
+++ b/styles/sass/_typography.scss
@@ -1,20 +1,28 @@
 html {
     font-size: 125%;
+    line-height: 1.15;
 }
 
-body, p {
+body {
     font-family: $bodyFont;
-    color: $text-primary;
+    font-size: 0.9rem;
     font-weight: 300;
+    line-height: 160%;
+    color: $text-primary;
 }
 
-h1, h2, h3 {
+h1, h2, h3, h4 {
     font-family: $headingFont;
+    line-height: 110%;
+    font-weight: 700;
 }
 
 h1 {
-    font-size: 7rem;
+    font-size: 5.3rem;
+    margin-top: 0.1em;
+    margin-bottom: 0.2em;
     padding-right: 25px;
+    line-height: 1;
 
 }
     // h3::before {
@@ -41,12 +49,22 @@ h1 {
 //     z-index: -1;
 // }
 
+h2, h3 {
+    font-weight: 600;
+}
+
 h2 {
-    font-size: 4rem;
+    font-size: 3.2rem;
 }
 
 h3 {
-    font-size:  3rem;
+    font-size:  2.7rem;
+    line-height: 125%;
+
+}
+
+h4 {
+    font-size: 2rem;
 }
 
 
