--- a/styles/style.css
+++ b/styles/style.css
@@ -298,29 +298,46 @@ template {
 /* colors */
 html {
   font-size: 125%;
+  line-height: 1.15;
 }
 
-body, p {
+body {
   font-family: "Montserrat", sans-serif;
-  color: #12161A;
+  font-size: 0.9rem;
   font-weight: 300;
+  line-height: 160%;
+  color: #12161A;
 }
 
-h1, h2, h3 {
+h1, h2, h3, h4 {
   font-family: "Eczar", serif;
+  line-height: 110%;
+  font-weight: 700;
 }
 
 h1 {
-  font-size: 7rem;
+  font-size: 5.3rem;
+  margin-top: 0.1em;
+  margin-bottom: 0.2em;
   padding-right: 25px;
+  line-height: 1;
+}
+
+h2, h3 {
+  font-weight: 600;
 }
 
 h2 {
-  font-size: 4rem;
+  font-size: 3.2rem;
 }
 
 h3 {
-  font-size: 3rem;
+  font-size: 2.7rem;
+  line-height: 125%;
+}
+
+h4 {
+  font-size: 2rem;
 }
 
 button {
@@ -337,8 +354,8 @@ body {
 }
 
 .wrapper {
-  width: 90%;
-  max-width: 1440px;
+  width: 85%;
+  max-width: 1280px;
   margin: 0 auto;
 }
 
@@ -353,29 +370,34 @@ li {
 }
 
 button,
-a.project-link {
+.button {
+  font-size: 1.2rem;
+  font-weight: 700;
+  line-height: 1.6;
   text-align: center;
   outline: none;
   color: #F5F2ED;
-  border: 1px solid black;
+  border: 2px solid black;
   background-color: #12161A;
-  padding: 18px 26px;
+  padding: 12px 24px;
   -webkit-box-shadow: none;
           box-shadow: none;
   cursor: pointer;
   font-family: "Eczar", serif;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
+  -webkit-transition: -webkit-box-shadow 200ms ease;
+  transition: -webkit-box-shadow 200ms ease;
+  transition: box-shadow 200ms ease;
+  transition: box-shadow 200ms ease, -webkit-box-shadow 200ms ease;
 }
 button:hover, button:focus,
-a.project-link:hover,
-a.project-link:focus {
-  -webkit-box-shadow: -4px 4px #168CFA;
-          box-shadow: -4px 4px #168CFA;
+.button:hover,
+.button:focus {
+  -webkit-box-shadow: -5px 5px #168CFA;
+          box-shadow: -5px 5px #168CFA;
 }
 
 section {
-  padding: 60px 0;
+  padding: 50px 0;
 }
 
 .section-heading {
@@ -386,25 +408,16 @@ section {
 
 .accent-line {
   width: 100%;
-  height: 2px;
+  height: 1px;
   background-color: #12161A;
   -ms-flex-item-align: center;
       align-self: center;
   margin-left: 25px;
 }
 
-header {
+.header-container {
   height: 100vh;
-}
-
-header:after {
-  content: "";
-  width: 100%;
-  height: auto;
-  background-image: url(../assets/wave.svg);
-  background-size: 100% 500px;
-  background-repeat: no-repeat;
-  display: block;
+  position: relative;
 }
 
 .desktop-nav {
@@ -436,32 +449,15 @@ header:after {
   font-size: 0.85rem;
   font-weight: normal;
 }
-.desktop-menu-dropdown li a:hover, .desktop-menu-dropdown li a:focus {
+.desktop-menu-dropdown li a:hover, .desktop-menu-dropdown li a:focus, .desktop-menu-dropdown li a:active {
   -webkit-text-decoration: solid underline #168CFA 3px;
           text-decoration: solid underline #168CFA 3px;
   text-underline-offset: 12px;
 }
 
 .hero-area {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-}
-
-.hero-heading {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  position: absolute;
+  top: 30%;
 }
 
 .highlight {
@@ -475,7 +471,50 @@ header:after {
   text-shadow: -2px -2px 0 #168CFA;
 }
 
-.projects-container {
+.hero-scroll {
+  position: absolute;
+  bottom: 60px;
+  width: 200px;
+  margin: 0 auto;
+  display: block;
+  cursor: pointer;
+  padding-bottom: 40px;
+  left: 0;
+  right: 0;
+}
+
+.hero-scroll .chevron {
+  margin-top: 20px;
+  display: block;
+  -webkit-animation: pulse 2s infinite;
+          animation: pulse 2s infinite;
+  color: #168CFA;
+}
+
+.chevron.bottom::before {
+  top: 0;
+  -webkit-transform: rotate(135deg);
+          transform: rotate(135deg);
+}
+
+.chevron::before {
+  border-style: solid;
+  border-width: 0.25em 0.25em 0 0;
+  content: "";
+  display: inline-block;
+  height: 20px;
+  position: relative;
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+  vertical-align: top;
+  width: 20px;
+}
+
+.about {
+  padding-bottom: 100px;
+}
+
+.about-section {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -485,67 +524,111 @@ header:after {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 80px;
+}
+
+.about-links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 60%;
+}
+
+.about-container {
+  width: 75%;
+}
+.about-container .about-title {
+  padding-bottom: 40px;
+}
+.about-container p {
+  padding-bottom: 20px;
+}
+
+.about-image {
+  width: 20%;
+}
+.about-image img {
+  max-width: 250px;
 }
 
 .project {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 46%;
-  background-color: #F0EBE4;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  width: 100%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  border: 1px solid #12161A;
-  -webkit-box-shadow: -5px 5px #12161A;
-          box-shadow: -5px 5px #12161A;
-  padding: 40px;
-  text-align: center;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-}
-.project:hover, .project:focus {
-  -webkit-box-shadow: -10px 10px #168CFA;
-          box-shadow: -10px 10px #168CFA;
+  background-color: #F0EBE4;
+  padding: 50px;
+  margin-bottom: 30px;
 }
 
 .project-image {
-  width: 70%;
+  width: 35%;
 }
 .project-image img {
   width: 100%;
-  border: 1px solid black;
+  display: inline-block;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+.project-image img:hover {
+  -webkit-box-shadow: 0px 13px 18px 0px #168CFA;
+          box-shadow: 0px 13px 18px 0px #168CFA;
+}
+
+.project-description {
+  width: 60%;
+}
+.project-description p {
+  padding: 30px 0;
+}
+.project-description .button {
+  margin-right: 20px;
 }
 
 .tools-used {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
 }
 .tools-used li {
   font-size: 0.8rem;
   border: 1px solid black;
-  padding: 4px;
+  padding: 3px 8px;
+  margin: 0 6px 50px 0;
+}
+.tools-used li:hover, .tools-used li:focus {
+  border: 1px solid #168CFA;
+  color: #168CFA;
 }
 
-.project-links {
-  margin: 40px;
+.button.borderless {
+  padding: 0;
+  border-color: transparent;
+  background-color: transparent;
+  -webkit-transition-property: text-shadow;
+  transition-property: text-shadow;
+  color: #12161a;
 }
-
-.project-link {
-  margin: 20px;
-  padding: 20px;
+.button.borderless:hover, .button.borderless:focus {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  text-shadow: -1px 1px 0 #168cfa;
 }
 
 .skills-container {
@@ -566,7 +649,7 @@ header:after {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin: 80px;
+  margin: 40px;
 }
 
 .skill-container {
@@ -593,14 +676,14 @@ header:after {
 }
 
 .skill-icon {
-  font-size: 4rem;
+  font-size: 3.5rem;
   padding-bottom: 20px;
 }
 
 .skill-container:hover {
   -webkit-transition: 0.4s;
   transition: 0.4s;
-  color: #FE6564;
+  color: #168CFA;
   -webkit-animation: shakeX;
           animation: shakeX;
   -webkit-animation-duration: 2s;
@@ -617,17 +700,24 @@ header:after {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  border-top: 1px solid #12161A;
-  padding-top: 80px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
-
-.contact-text,
-.contact-form {
-  width: 45%;
+.contact-container .contact-text,
+.contact-container .contact-form {
+  width: 48%;
 }
-
-.contact-text {
-  padding-left: 15px;
+.contact-container .contact-text h2 {
+  padding-bottom: 20px;
+}
+.contact-container .contact-text p {
+  font-size: 1.1rem;
+  line-height: 150%;
+  padding-bottom: 40px;
+}
+.contact-container .contact-form {
+  padding-right: 120px;
 }
 
 form {
@@ -641,16 +731,17 @@ form {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  padding: 40px;
 }
 form label {
   padding-bottom: 5px;
   text-transform: uppercase;
-  font-size: 0.8rem;
+  font-size: 0.7rem;
   letter-spacing: 2px;
 }
 form input,
 form textarea {
+  font-size: 0.8rem;
+  font-family: "Montserrat", sans-serif;
   border: 1px solid #12161A;
   background-color: inherit;
   -webkit-box-shadow: -2px 2px 0 0 #12161A;
@@ -671,6 +762,8 @@ form textarea:focus {
 }
 form input {
   padding: 15px;
+  overflow: visible;
+  resize: none;
 }
 form textarea {
   resize: none;
@@ -678,6 +771,41 @@ form textarea {
 }
 form button {
   width: 120px;
+}
+
+::-webkit-input-placeholder {
+  font-family: "Montserrat", sans-serif;
+  color: #969696;
+  font-size: 0.8rem;
+  opacity: 1;
+}
+
+::-moz-placeholder {
+  font-family: "Montserrat", sans-serif;
+  color: #969696;
+  font-size: 0.8rem;
+  opacity: 1;
+}
+
+:-ms-input-placeholder {
+  font-family: "Montserrat", sans-serif;
+  color: #969696;
+  font-size: 0.8rem;
+  opacity: 1;
+}
+
+::-ms-input-placeholder {
+  font-family: "Montserrat", sans-serif;
+  color: #969696;
+  font-size: 0.8rem;
+  opacity: 1;
+}
+
+::placeholder {
+  font-family: "Montserrat", sans-serif;
+  color: #969696;
+  font-size: 0.8rem;
+  opacity: 1;
 }
 
 .social-nav ul {
@@ -693,28 +821,80 @@ form button {
   padding-right: 30px;
 }
 .social-nav ul li i:hover, .social-nav ul li i:focus {
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
   -webkit-transform: scale(1.3);
           transform: scale(1.3);
+}
+
+.inline-link {
+  -webkit-box-shadow: inset 0 -1px 0 0 #168CFA;
+          box-shadow: inset 0 -1px 0 0 #168CFA;
+  -webkit-transition: -webkit-box-shadow 200ms ease;
+  transition: -webkit-box-shadow 200ms ease;
+  transition: box-shadow 200ms ease;
+  transition: box-shadow 200ms ease, -webkit-box-shadow 200ms ease;
+}
+.inline-link:hover, .inline-link:active {
+  -webkit-box-shadow: inset 0 -3px 0 0 #168CFA;
+          box-shadow: inset 0 -3px 0 0 #168CFA;
 }
 
 footer {
   border-top: 1px solid black;
   height: 100px;
 }
-footer a {
+footer p {
   text-align: center;
   font-size: 0.85rem;
-  font-weight: 700;
-  padding: 40px;
+  padding: 30px;
 }
 footer a:hover, footer a:focus {
   -webkit-text-decoration: solid underline #168CFA 3px;
           text-decoration: solid underline #168CFA 3px;
   text-underline-offset: 12px;
 }
+footer a p.top-link {
+  font-weight: 700;
+}
 
 li {
   text-decoration: none;
+}
+
+@media (max-width: 991px) {
+  h2 {
+    font-size: 2.8rem;
+  }
+  .project {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .project .project-image,
+.project .project-description {
+    width: 100%;
+  }
+  .contact-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .contact-container .contact-text,
+.contact-container .contact-form {
+    width: 100%;
+  }
+  .contact-container .contact-text {
+    padding-left: 0;
+  }
+  .contact-container .social-nav {
+    margin-bottom: 40px;
+  }
+}
+@media (max-width: 767px) {
+  h2 {
+    font-size: 2.4rem;
+  }
 }
