--- a/styles/sass/_projects.scss
+++ b/styles/sass/_projects.scss
@@ -18,6 +18,8 @@
     background-color: $surface-secondary;
     padding: 50px;
     margin-bottom: 30px;
+    border: 1px solid $text-primary;
+
 
     //     flex-direction: column;
     //     justify-content: center;
