--- a/styles/sass/_variables.scss
+++ b/styles/sass/_variables.scss
@@ -1,5 +1,12 @@
+// Custom font 
+@font-face {
+    font-family: 'Sprat';
+    src: url(../assets/fonts/Sprat-RegularBold.otf);
+    font-display: swap;
+}
+
 /* fonts */
-$headingFont: 'Eczar', serif;
+$headingFont: 'Sprat';
 $bodyFont: 'Montserrat', sans-serif;
 
 /* colors */
@@ -9,6 +16,9 @@ $surface-secondary: #F0EBE4;
 $text-primary: #12161A;
 
 /// dark mode inverted theme
+/// 
+
+
 $inverted-surface-primary: #12161A;
 $inverted-surface-secondary: #1B2126;
 $inverted-text-primary: #F5F2ED;
