--- a/styles/style.css
+++ b/styles/style.css
@@ -294,6 +294,11 @@ template {
   font-weight: normal;
   font-style: normal;
 }
+@font-face {
+  font-family: "Sprat";
+  src: url(../assets/fonts/Sprat-RegularBold.otf);
+  font-display: swap;
+}
 /* fonts */
 /* colors */
 html {
@@ -310,7 +315,7 @@ body {
 }
 
 h1, h2, h3, h4 {
-  font-family: "Eczar", serif;
+  font-family: "Sprat";
   line-height: 110%;
   font-weight: 700;
 }
@@ -340,8 +345,9 @@ h4 {
   font-size: 2rem;
 }
 
-button {
-  font-weight: "Eczar", serif;
+button,
+a.button {
+  font-family: "Sprat";
 }
 
 * {
@@ -383,7 +389,6 @@ button,
   -webkit-box-shadow: none;
           box-shadow: none;
   cursor: pointer;
-  font-family: "Eczar", serif;
   -webkit-transition: -webkit-box-shadow 200ms ease;
   transition: -webkit-box-shadow 200ms ease;
   transition: box-shadow 200ms ease;
@@ -397,13 +402,14 @@ button:hover, button:focus,
 }
 
 section {
-  padding: 50px 0;
+  margin-bottom: 80px;
 }
 
 .section-heading {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  padding-bottom: 60px;
 }
 
 .accent-line {
@@ -457,7 +463,7 @@ section {
 
 .hero-area {
   position: absolute;
-  top: 30%;
+  top: 20%;
 }
 
 .highlight {
@@ -489,6 +495,7 @@ section {
   -webkit-animation: pulse 2s infinite;
           animation: pulse 2s infinite;
   color: #168CFA;
+  text-align: center;
 }
 
 .chevron.bottom::before {
@@ -508,10 +515,6 @@ section {
           transform: rotate(-45deg);
   vertical-align: top;
   width: 20px;
-}
-
-.about {
-  padding-bottom: 100px;
 }
 
 .about-section {
@@ -570,6 +573,7 @@ section {
   background-color: #F0EBE4;
   padding: 50px;
   margin-bottom: 30px;
+  border: 1px solid #12161A;
 }
 
 .project-image {
@@ -667,7 +671,7 @@ section {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin: 20px;
+  margin: 15px;
   text-align: center;
 }
 
@@ -676,7 +680,7 @@ section {
 }
 
 .skill-icon {
-  font-size: 3.5rem;
+  font-size: 3rem;
   padding-bottom: 20px;
 }
 
